[gd_scene load_steps=35 format=2]

[ext_resource path="res://ChillZone/wash_pomopet/AnimationPlayer_Anims/sparkle_fade_out.tres" type="Animation" id=1]
[ext_resource path="res://ChillZone/pet/Pet.tscn" type="PackedScene" id=2]
[ext_resource path="res://ChillZone/ChillZone.gd" type="Script" id=3]
[ext_resource path="res://ChillZone/ActionBar.gd" type="Script" id=4]
[ext_resource path="res://ChillZone/Setting Assets/Chillzone-floor.png" type="Texture" id=5]
[ext_resource path="res://ChillZone/wash_pomopet/ParticleEffectController.gd" type="Script" id=6]
[ext_resource path="res://assets/fonts/PressStart2P-vaV7_26pt.tres" type="DynamicFont" id=7]
[ext_resource path="res://ChillZone/Setting Assets/Forest_background.png" type="Texture" id=8]
[ext_resource path="res://ChillZone/wash_pomopet/SoundEffects/mixkit-liquid-bubble-3000-shorter.wav" type="AudioStream" id=9]
[ext_resource path="res://ChillZone/wash_pomopet/sparkle_animation/f7.png" type="Texture" id=10]
[ext_resource path="res://ChillZone/wash_pomopet/sparkle_animation/f5.png" type="Texture" id=11]
[ext_resource path="res://ChillZone/wash_pomopet/SoundEffects/clean-sound-effect.wav" type="AudioStream" id=12]
[ext_resource path="res://ChillZone/wash_pomopet/sparkle_animation/f3.png" type="Texture" id=13]
[ext_resource path="res://ChillZone/wash_pomopet/sparkle_animation/f1.png" type="Texture" id=14]
[ext_resource path="res://ChillZone/wash_pomopet/CleanGlowParticle.tscn" type="PackedScene" id=15]
[ext_resource path="res://ChillZone/wash_pomopet/MouseBubblesParticle.tscn" type="PackedScene" id=16]
[ext_resource path="res://ChillZone/wash_pomopet/sparkle_animation/f2.png" type="Texture" id=17]
[ext_resource path="res://ChillZone/wash_pomopet/sparkle_animation/f4.png" type="Texture" id=18]
[ext_resource path="res://ChillZone/wash_pomopet/sparkle_animation/f6.png" type="Texture" id=19]
[ext_resource path="res://ChillZone/wash_pomopet/AnimationPlayer_Anims/sparkle_fade_in.tres" type="Animation" id=20]
[ext_resource path="res://ChillZone/PoopController.gd" type="Script" id=21]
[ext_resource path="res://ChillZone/Trashcan.gd" type="Script" id=22]
[ext_resource path="res://ChillZone/poop_pomopet/art/trashcan_lid_on.png" type="Texture" id=23]
[ext_resource path="res://ChillZone/poop_pomopet/art/trashcan_lid_off.png" type="Texture" id=24]
[ext_resource path="res://ChillZone/poop_pomopet/art/trashcan_liner_background_open.png" type="Texture" id=25]
[ext_resource path="res://ChillZone/poop_pomopet/CloudPuffParticle.tscn" type="PackedScene" id=26]
[ext_resource path="res://ChillZone/poop_pomopet/SoundEffects/TrashcanLidClose.mp3" type="AudioStream" id=27]
[ext_resource path="res://ChillZone/poop_pomopet/SoundEffects/TrashcanLidOpen.mp3" type="AudioStream" id=28]

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="TileSet" id=10]
0/name = "Chillzone-floor.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 742, 2304, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Chillzone-floor.png 1"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 742, 2176, 128, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Chillzone-floor.png 2"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 870, 2176, 128, 128 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Chillzone-floor.png 3"
3/texture = ExtResource( 5 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 998, 2176, 128, 128 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Chillzone-floor.png 4"
4/texture = ExtResource( 5 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 1126, 2176, 128, 128 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "Chillzone-floor.png 5"
5/texture = ExtResource( 5 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 1254, 2176, 128, 128 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "Chillzone-floor.png 6"
6/texture = ExtResource( 5 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 1766, 2176, 128, 128 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "Chillzone-floor.png 7"
7/texture = ExtResource( 5 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 1638, 2176, 128, 128 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "Chillzone-floor.png 8"
8/texture = ExtResource( 5 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 1382, 2048, 128, 128 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "Chillzone-floor.png 9"
9/texture = ExtResource( 5 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 1510, 2048, 128, 128 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "Chillzone-floor.png 10"
10/texture = ExtResource( 5 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 1126, 2048, 128, 128 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "Chillzone-floor.png 11"
11/texture = ExtResource( 5 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 1766, 2048, 128, 128 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "Chillzone-floor.png 12"
12/texture = ExtResource( 5 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 870, 2048, 128, 128 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "Chillzone-floor.png 13"
13/texture = ExtResource( 5 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 742, 2176, 128, 128 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape = SubResource( 3 )
13/shape_one_way = false
13/shape_one_way_margin = 1.0
13/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
13/z_index = 0

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 2085.92, 142.218 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 150.445, 393.196 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 17 ), ExtResource( 13 ), ExtResource( 18 ), ExtResource( 11 ), ExtResource( 19 ), ExtResource( 10 ) ],
"loop": true,
"name": "sparkle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=14]
radius = 31.5139

[node name="ChillZone" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Sprite" type="Sprite" parent="Background"]
position = Vector2( 958.976, 332.627 )
z_index = -5
texture = ExtResource( 8 )

[node name="TileMap" type="TileMap" parent="Background"]
position = Vector2( 0, -2 )
z_index = -5
tile_set = SubResource( 10 )
format = 1
tile_data = PoolIntArray( 589822, 0, 0, 524288, 8, 0, 524290, 9, 0, 524292, 10, 0, 524294, 11, 0, 524296, 10, 0, 524298, 8, 0, 524300, 10, 0, 524302, 11, 0, 524304, 12, 0, 524306, 11, 0, 524308, 12, 0, 524310, 9, 0, 524312, 8, 0, 524314, 10, 0, 524316, 11, 0, 524318, 0, 0, 655358, 0, 0, 589854, 0, 0, 720894, 0, 0, 655360, 7, 0, 655362, 4, 0, 655364, 5, 0, 655366, 1, 0, 655368, 3, 0, 655370, 5, 0, 655372, 7, 0, 655374, 7, 0, 655376, 3, 0, 655378, 6, 0, 655380, 3, 0, 655382, 2, 0, 655384, 3, 0, 655386, 5, 0, 655388, 1, 0, 655390, 0, 0, 786430, 0, 0, 720926, 0, 0, 851966, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0, 786458, 0, 0, 786459, 0, 0, 786460, 0, 0, 786462, 0, 0 )

[node name="Floor" type="RigidBody2D" parent="Background"]
collision_layer = 2
mode = 1
gravity_scale = 0.0

[node name="Floor" type="CollisionShape2D" parent="Background/Floor"]
position = Vector2( 958.182, 770.166 )
scale = Vector2( 0.461791, -0.696972 )
shape = SubResource( 12 )

[node name="Walls" type="RigidBody2D" parent="Background"]
mode = 1
gravity_scale = 0.0

[node name="LeftWall" type="CollisionShape2D" parent="Background/Walls"]
position = Vector2( -150.535, 275.813 )
shape = SubResource( 13 )

[node name="RightWall" type="CollisionShape2D" parent="Background/Walls"]
position = Vector2( 2071.83, 275.813 )
shape = SubResource( 13 )

[node name="Cieling" type="RigidBody2D" parent="Background"]
collision_layer = 2
mode = 1

[node name="Cieling" type="CollisionShape2D" parent="Background/Cieling"]
position = Vector2( 958.976, -85.0622 )
scale = Vector2( 0.461791, -0.696972 )
shape = SubResource( 12 )

[node name="ActionBar" type="Control" parent="."]
margin_right = 1900.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 100 )
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="ActionBar"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CleanButton" type="Button" parent="ActionBar/HBoxContainer"]
margin_right = 506.0
margin_bottom = 100.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
text = "[Temp] Clean Button"

[node name="FeedButton" type="Button" parent="ActionBar/HBoxContainer"]
margin_left = 510.0
margin_right = 990.0
margin_bottom = 100.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
text = "[Temp] Feed Button"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PetButton" type="Button" parent="ActionBar/HBoxContainer"]
margin_left = 994.0
margin_right = 1448.0
margin_bottom = 100.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
text = "[Temp] Pet Button"

[node name="PoopPickupButton" type="Button" parent="ActionBar/HBoxContainer"]
margin_left = 1452.0
margin_right = 1932.0
margin_bottom = 100.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
text = "[Temp] Pickup Poop"

[node name="ActionBarController" type="Node" parent="."]

[node name="WashPomopetController" type="Node" parent="ActionBarController"]

[node name="EffectController" type="Node2D" parent="ActionBarController/WashPomopetController"]
script = ExtResource( 6 )

[node name="MouseBubblesParticle" parent="ActionBarController/WashPomopetController/EffectController" instance=ExtResource( 16 )]

[node name="MouseBubblesCooldownTimer" type="Timer" parent="ActionBarController/WashPomopetController/EffectController"]
wait_time = 0.05
one_shot = true

[node name="CleanGlowParticle" parent="ActionBarController/WashPomopetController/EffectController" instance=ExtResource( 15 )]
position = Vector2( 958.976, 422.601 )
z_index = -1

[node name="CleanEffectTimer" type="Timer" parent="ActionBarController/WashPomopetController/EffectController"]
wait_time = 1.5
one_shot = true

[node name="CleanSparkle" type="AnimatedSprite" parent="ActionBarController/WashPomopetController/EffectController"]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 11 )
animation = "sparkle"
frame = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="ActionBarController/WashPomopetController/EffectController/CleanSparkle"]
anims/sparkle_fade_in = ExtResource( 20 )
anims/sparkle_fade_out = ExtResource( 1 )

[node name="CleanSoundEffect" type="AudioStreamPlayer" parent="ActionBarController/WashPomopetController/EffectController"]
stream = ExtResource( 12 )
volume_db = -10.0

[node name="BubbleSoundEffect" type="AudioStreamPlayer" parent="ActionBarController/WashPomopetController/EffectController"]
stream = ExtResource( 9 )
volume_db = -12.5

[node name="PoopController" type="Node" parent="ActionBarController"]
script = ExtResource( 21 )

[node name="PoopRegion" type="ReferenceRect" parent="ActionBarController/PoopController"]
margin_left = -1.02399
margin_top = 668.506
margin_right = 1816.98
margin_bottom = 669.506
border_color = Color( 1, 0, 0, 0 )

[node name="Trashcan" type="Node2D" parent="ActionBarController/PoopController"]
position = Vector2( 1556.44, 534.292 )
scale = Vector2( 6, 6 )
script = ExtResource( 22 )

[node name="TrashcanClosed" type="Sprite" parent="ActionBarController/PoopController/Trashcan"]
visible = false
texture = ExtResource( 23 )

[node name="TrashcanOpen" type="Node2D" parent="ActionBarController/PoopController/Trashcan"]
visible = false

[node name="TrashcanOpenForeground" type="Sprite" parent="ActionBarController/PoopController/Trashcan/TrashcanOpen"]
z_index = 2
texture = ExtResource( 24 )

[node name="TrashcanOpenBackground" type="Sprite" parent="ActionBarController/PoopController/Trashcan/TrashcanOpen"]
z_index = -2
texture = ExtResource( 25 )

[node name="CloseWaitOut" type="Timer" parent="ActionBarController/PoopController/Trashcan/TrashcanOpen"]
wait_time = 0.3

[node name="TrashcanBucket" type="RigidBody2D" parent="ActionBarController/PoopController/Trashcan/TrashcanOpen"]
collision_layer = 2
mode = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ActionBarController/PoopController/Trashcan/TrashcanOpen/TrashcanBucket"]
polygon = PoolVector2Array( -19.3906, -11.4723, -19.3906, -8.79653, -18.4987, -8.79653, -18.2014, -5.72442, -17.3095, -5.72442, -17.2104, -4.73341, -16.4176, -4.73341, -16.2194, 0.221619, -15.4266, 0.320717, -15.3275, 2.30273, -14.4356, 2.30273, -14.4356, 4.28474, -13.4446, 4.28474, -13.3455, 8.44697, -12.2554, 8.44697, -12.2554, 10.5281, -11.3635, 10.429, -11.3635, 16.2759, -10.2734, 16.2759, -10.3725, 17.366, -9.48056, 17.2669, -9.38147, 18.4561, -8.39046, 18.4561, -8.39046, 19.4471, -7.49855, 19.5462, -7.39944, 20.5372, -0.363281, 20.4381, -0.462402, 19.4471, 5.48364, 19.4471, 5.48364, 18.357, 8.35754, 18.357, 8.55576, 17.366, 9.54675, 17.366, 9.44766, 16.4741, 10.736, 16.4741, 10.6369, 15.4831, 13.4117, 15.2849, 13.6099, 16.4741, 16.3847, 16.375, 16.4838, 15.2849, 17.2766, 15.2849, 17.1775, 13.5011, 18.3667, 13.5011, 18.3667, 11.2218, 19.2586, 11.3209, 19.2586, 0.419823, 18.3667, 0.419823, 18.3667, -4.73341, 17.4748, -4.73341, 17.2766, -6.41812, 16.2856, -6.51722, 16.2856, -9.39114, 15.3937, -9.39114, 15.3937, -11.3731, 14.4027, -11.274, 14.6009, -12.3642, 13.8081, -12.3642, 13.6099, -13.3552, 11.6279, -13.4543, 11.5287, -15.6345, 6.67285, -15.6345, 5.48364, -15.6345, 5.48364, -14.4453, 8.25845, -11.274, 12.718, 5.47395, -9.48056, 10.429, -15.5257, -7.01273, -18.4987, -10.4812, -18.5978, -11.4723 )

[node name="OpenTrashcanArea" type="Area2D" parent="ActionBarController/PoopController/Trashcan"]
position = Vector2( -6.4226, -17.0295 )
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionBarController/PoopController/Trashcan/OpenTrashcanArea"]
position = Vector2( 2.80301, 1.83679 )
shape = SubResource( 14 )

[node name="PoopKillBox" type="Area2D" parent="ActionBarController/PoopController/Trashcan"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ActionBarController/PoopController/Trashcan/PoopKillBox"]
polygon = PoolVector2Array( -14.9468, -6.44952, -9.31252, 10.1534, 12.4899, 5.28675, 8.13174, -10.9801 )

[node name="CloudPuffParticle" parent="ActionBarController/PoopController/Trashcan" instance=ExtResource( 26 )]
position = Vector2( -2.20239, -2.83163 )
scale = Vector2( 0.5, 0.5 )
emitting = false
one_shot = true
emission_shape = 2
emission_rect_extents = Vector2( 30, 35 )
angular_velocity = 110.0
angular_velocity_random = 0.25

[node name="TrashcanCloseSound" type="AudioStreamPlayer2D" parent="ActionBarController/PoopController/Trashcan"]
stream = ExtResource( 27 )
volume_db = -20.0

[node name="TrashcanOpenSound" type="AudioStreamPlayer2D" parent="ActionBarController/PoopController/Trashcan"]
stream = ExtResource( 28 )
volume_db = -20.0

[node name="FoodController" type="Node" parent="ActionBarController"]

[node name="Sprite" type="Sprite" parent="ActionBarController/FoodController"]

[node name="Pet" parent="." instance=ExtResource( 2 )]
position = Vector2( 417.556, 558.986 )
scale = Vector2( 0.7, 0.7 )

[connection signal="pressed" from="ActionBar/HBoxContainer/CleanButton" to="ActionBar" method="_on_CleanButton_pressed"]
[connection signal="pressed" from="ActionBar/HBoxContainer/PoopPickupButton" to="ActionBar" method="_on_PoopPickupButton_pressed"]
[connection signal="hide" from="ActionBarController/WashPomopetController/EffectController/MouseBubblesParticle" to="ActionBarController/WashPomopetController/EffectController/MouseBubblesParticle" method="_on_MouseBubblesParticle_hide"]
[connection signal="timeout" from="ActionBarController/WashPomopetController/EffectController/MouseBubblesCooldownTimer" to="ActionBarController/WashPomopetController/EffectController" method="_on_MouseBubblesCooldownTimer_timeout"]
[connection signal="timeout" from="ActionBarController/WashPomopetController/EffectController/CleanEffectTimer" to="ActionBarController/WashPomopetController/EffectController" method="_on_CleanEffectTimer_timeout"]
[connection signal="poopPickUpEnd" from="ActionBarController/PoopController" to="ActionBarController/PoopController/Trashcan" method="_on_PoopController_poopPickUpEnd"]
[connection signal="poopPickUpStart" from="ActionBarController/PoopController" to="ActionBarController/PoopController/Trashcan" method="_on_PoopController_poopPickUpStart"]
[connection signal="timeout" from="ActionBarController/PoopController/Trashcan/TrashcanOpen/CloseWaitOut" to="ActionBarController/PoopController/Trashcan" method="_on_CloseWaitOut_timeout"]
[connection signal="body_entered" from="ActionBarController/PoopController/Trashcan/OpenTrashcanArea" to="ActionBarController/PoopController/Trashcan" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="ActionBarController/PoopController/Trashcan/OpenTrashcanArea" to="ActionBarController/PoopController/Trashcan" method="_on_Area2D_body_exited"]
[connection signal="mouse_entered" from="ActionBarController/PoopController/Trashcan/OpenTrashcanArea" to="ActionBarController/PoopController/Trashcan" method="_on_OpenTrashcanArea_mouse_entered"]
[connection signal="mouse_exited" from="ActionBarController/PoopController/Trashcan/OpenTrashcanArea" to="ActionBarController/PoopController/Trashcan" method="_on_OpenTrashcanArea_mouse_exited"]
[connection signal="body_entered" from="ActionBarController/PoopController/Trashcan/PoopKillBox" to="ActionBarController/PoopController" method="_on_Area2D_body_entered"]
[connection signal="hide" from="ActionBarController/PoopController/Trashcan/CloudPuffParticle" to="ActionBarController/PoopController/Trashcan" method="_on_CloudPuffParticle_hide"]
[connection signal="finished" from="ActionBarController/PoopController/Trashcan/TrashcanCloseSound" to="ActionBarController/PoopController/Trashcan" method="_on_TrashcanCloseSound_finished"]
[connection signal="finished" from="ActionBarController/PoopController/Trashcan/TrashcanOpenSound" to="ActionBarController/PoopController/Trashcan" method="_on_TrashcanOpenSound_finished"]
